# mcp-python-repl

./: .gitignore  README.md  pyproject.toml
src/mcp_python_repl/: config.py  executor.py  server.py  session.py
tests/: test_core.py
