[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mcp-python-repl"
version = "0.1.0"
description = "A production-grade MCP server providing a persistent Python REPL with multi-session support, sandboxing, and timeout protection."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Soufiane Aazizi" },
]
keywords = ["mcp", "python", "repl", "interpreter", "llm", "agent", "model-context-protocol"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Interpreters",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "mcp>=1.7.0",
    "pydantic>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.8",
]

[project.urls]
Homepage = "https://github.com/aazizisoufiane"
Repository = "https://github.com/aazizisoufiane/mcp-python-repl"
Issues = "https://github.com/aazizisoufiane/mcp-python-repl/issues"

[project.scripts]
mcp-python-repl = "mcp_python_repl.server:main"


[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP"]

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_python_repl"]

[tool.hatch.build.targets.wheel.sources]
"src" = ""

[tool.pytest.ini_options]
pythonpath = ["src"]
asyncio_mode = "auto"
testpaths = ["tests"]
